Use overflow-y in PDB table, fix style
Refs pombase/website#1997

--- a/src/app/pdb-structure-viewer/pdb-structure-viewer.component.css
+++ b/src/app/pdb-structure-viewer/pdb-structure-viewer.component.css
@@ -16,7 +16,11 @@
 }
 
 .pdb-table-container {
-  overflow: scroll;
+  overflow-y: auto;
+}
+
+table {
+  margin-right: 2em;
 }
 
 @media (max-width: 1299px) {
@@ -49,7 +53,8 @@
 }
 
 td, th {
-  padding: 0.2em 0.6em;
+  padding: 0.2em 0.8em;
+  white-space: nowrap;
 }
 
 th {
